feat: add docker compose

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,13 @@
+# App
+HTTP_PORT=3000
+GRPC_PORT=20000
+
 # Database configurations
 MY_SQL_HOST=
 MY_SQL_PORT=3306
 MY_SQL_USER=
 MY_SQL_PASSWORD=
-MY_SQL_DATABSE=
+MY_SQL_DATABASE=
 MY_SQL_LOGGING=false
 
 # Logging
