--- a/.env.example
+++ b/.env.example
@@ -3,12 +3,12 @@ HTTP_PORT=3000
 GRPC_PORT=20000
 
 # Database configurations
-MY_SQL_HOST=
+MY_SQL_HOST=mysql
 MY_SQL_PORT=3306
-MY_SQL_USER=
-MY_SQL_PASSWORD=
-MY_SQL_DATABASE=
-MY_SQL_LOGGING=false
+MY_SQL_USER=root
+MY_SQL_PASSWORD=password
+MY_SQL_DATABASE=template
+MY_SQL_LOGGING=true
 
 # Logging
 LOG_DIR=logs
@@ -16,6 +16,6 @@ LOG_MAX_SIZE='20m'
 LOG_MAX_FILES=168
 
 # Kafka
-KAFKA_BROKERS=
-KAFKA_GROUP_ID=
-KAFKA_CLIENT_ID=
+KAFKA_BROKERS=kafka-broker-1:9092
+KAFKA_GROUP_ID=template-service-group-id
+KAFKA_CLIENT_ID=template-service-client-id
