--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "scripts": {
         "generate-grpc": "./node_modules/.bin/proto-loader-gen-types --longs=Number --enums=Number --oneofs --grpcLib=@grpc/grpc-js --outDir=src/proto/gen src/proto/**/*.proto",
         "clean": "rimraf ./src/proto/gen && rimraf .dist",
-        "build": "npm run clean && npm run generate-grpc && npx tsc --build",
-        "build-clean": "npm run clean && tsc --build --clean",
-        "dev-initialize": "ts-node-dev src/main.ts --initialize",
-        "dev": "ts-node-dev src/main.ts --start_http_server",
-        "dev-grpc": "ts-node-dev src/main.ts --start_grpc_server",
+        "build": "npm run clean && npm run generate-grpc && tsc --build && npm run post:compile",
+        "build-clean": "npm run clean && tsc --build --clean && npm run post:compile",
+        "post:compile": "ef-tspm",
+        "dev-initialize": "ts-node-dev -r tsconfig-paths/register src/main.ts --initialize",
+        "dev": "ts-node-dev -r tsconfig-paths/register src/main.ts --start_http_server",
+        "dev-grpc": "ts-node-dev -r tsconfig-paths/register src/main.ts --start_grpc_server",
         "start-initialize": "node dist/main.js --prod --initialize",
         "start": "node dist/main.js --prod --start_http_server",
         "start-grpc": "node dist/main.js --prod --start_grpc_server",
         "prettier-format": "prettier --write .",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest",
+        "test-watch": "jest --watchAll --no-cache --coverage"
     },
     "keywords": [],
     "author": "",
@@ -47,12 +49,17 @@
         "winston-daily-rotate-file": "^5.0.0"
     },
     "devDependencies": {
+        "@ef-carbon/tspm": "^2.2.5",
+        "@jest/globals": "^29.7.0",
         "@types/bcrypt": "^5.0.2",
         "@types/minimist": "^1.2.5",
         "@types/node": "^20.11.17",
+        "jest": "^29.7.0",
         "prettier": "^3.2.5",
+        "ts-jest": "^29.1.2",
         "ts-node-dev": "^2.0.0",
         "ts-protoc-gen": "^0.15.0",
+        "tsconfig-paths": "^4.2.0",
         "typescript": "^5.3.3"
     }
 }
